--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include LICENSE
-include README.srt
+include README.rst
 recursive-include polls/static *
 recursive-include polls/templates *
 recursive-include docs *
