updates on setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,14 @@
 [metadata]
 name = django-polled
 version = 0.1.0
-description = A Django app to for Web-based polls.
-long_description = file: README.srt
-url = https://test.pypi.org/
+description = A Django app for Web-based polls.
+long_description = file: README.rst
+url = https://edchelstephens.herokuapp.com/
 author = Edchel Stephen Nini
 author_email = edchelstephens@gmail.com
-license = BSD-3-Clause
-classifiers = 
-    ENVIRONMENT :: Web Environment
+license = BSD-3-Clause  
+classifiers =
+    Environment :: Web Environment
     Framework :: Django
     Framework :: Django :: 3.1
     Intended Audience :: Developers
