--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,9 @@ name = django-polled
 version = 0.1.1
 description = A Django app for Web-based polls.
 long_description = file: README.rst
-url = https://edchelstephens.herokuapp.com/
+url = https://github.com/edchelstephens/django-polled
+project_urls =
+    Bug Tracker = https://github.com/edchelstephens/django-polled/issues
 author = Edchel Stephen Nini
 author_email = edchelstephens@gmail.com
 license = BSD-3-Clause  
