Move polls app to src.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = django-polled
+name = django-polled-edchelstephens
 version = 0.1.1
 description = A Django app for Web-based polls.
 long_description = file: README.rst
@@ -29,3 +29,4 @@ classifiers =
 [options]
 include_package_data = true
 packages = find:
+python_requires = >=3.9
