uploaded at https://test.pypi.org/project/django-polled-edchelstephens/0.1.1/

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,8 @@
 name = django-polled-edchelstephens
 version = 0.1.1
 description = A Django app for Web-based polls.
-long_description = file: README.rst
+long_description = file: README.md
+long_description_content_type = text/markdown
 url = https://github.com/edchelstephens/django-polled
 project_urls =
     Bug Tracker = https://github.com/edchelstephens/django-polled/issues
@@ -27,6 +28,11 @@ classifiers =
     Topic :: Internet :: WWW/HTTP :: Dynamic Content
 
 [options]
+package_dir = 
+    = src
 include_package_data = true
 packages = find:
 python_requires = >=3.9
+
+[options.packages.find]
+where = src
