--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include LICENSE
 include README.md
-recursive-include polls/static *
-recursive-include polls/templates *
+recursive-include src/polls/static *
+recursive-include src/polls/templates *
 recursive-include docs *
